update detail of project

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     hello iam ajit
     iam from sambalpur
     i am learning web development
+
+    iam working in cli quiz app
+
 </body>
 </html>
